fix servicelist on mobile devices

--- a/src/app/pages/services-map-page/components/services-list/services-list.component.css
+++ b/src/app/pages/services-map-page/components/services-list/services-list.component.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  min-height: 0;
   background-color: var(--color-white-alt);
   overflow: hidden;
 }
@@ -35,6 +36,7 @@
 .services-list {
   flex: 1;
   height: 100%;
+  min-height: 0;
   padding: 0;
   background-color: var(--color-white-alt);
 }
@@ -43,6 +45,7 @@
 cdk-virtual-scroll-viewport {
   height: 100%;
   width: 100%;
+  min-height: 0;
 }
 
 /* CDK viewport content wrapper */
